# pokeDAM

./: .gitignore  Cargo.toml  DEPLOYMENT_PLAN.md  asdf  init  init.sh  package-lock.json
.agents/rules/: general-work-idea.md
.agents/workflows/: engine-workflow.md
.github/: copilot-instructions.md
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: Database.ts  auth.ts  database.ts  jwt.ts  main.ts  result.ts  sanitizer.ts  server.js  server.ts  sockets.ts
backend/src/auth/: auth.models.ts
backend/src/config/: Database.js  Database.ts
backend/src/controllers/: AuthController.js  AuthController.ts  LobbyController.js  LobbyController.ts  game.ts  lobby.ts
backend/src/db/: client.ts
backend/src/db/endpoints/: auth.ts  user.ts
backend/src/db/entrypoints/: auth.ts  games.ts  user.ts
backend/src/endpoints/: auth.ts  games.ts  index.ts  user.ts  utils.ts
backend/src/lobby/: index.ts  lobby.controller.ts  lobby.create.ts  lobby.get-all.ts  lobby.get.ts  lobby.join.ts  lobby.models.ts  lobby.service.ts  lobby.set-ready.ts  lobby.ts
backend/src/lobby/events/: lobbies.ts
backend/src/middleware/: sanitize.ts
backend/src/services/: Lobby.ts  LobbyService.js  LobbyService.ts  game.ts  lobby.service.ts  lobby.ts  main-server.service.ts  movs.ts  sim.ts  store.service.ts  store.ts
backend/src/sockets/: lobby.service.ts
client/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.spec.json
client/scripts/: generator.js
client/src/: index.html  main.ts  styles.css
client/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.ts  http-interceptor.ts
client/src/app/guards/: socket-route.guard.ts
client/src/app/interceptors/: auth.interceptor.ts
client/src/app/models/: game.models.ts  game.ts  pokemon.dataset.ts  pokemon.ts
client/src/app/services/: auth.service.ts  current-lobby.service.ts  environment.service.ts  error.service.ts  group.service.ts  history.service.ts  http.service.ts  legacy-current-lobby.service.ts  legacy-lobbies.service.ts  legacy-socket.service.ts  lobbies.service.ts  lobby-socket-client.service.ts  lobby-socket.service.ts  (+7 more)
dataset/: Cargo.toml  build.rs  pokeapi_models.rs
dataset/src/: lib.rs
engine/: Cargo.toml
engine/src/: board.rs  context.rs  history.rs  lib.rs  mov.rs  pokemon.rs  priority.rs  request.rs  turn.rs  types.rs
rest-server/: .gitignore  pom.xml
server/: Cargo.toml
server/src/: auth_annonymous.rs  auth_google.rs  config.rs  error.rs  jwt.rs  lib.rs  login_anonymous.rs  login_google.rs  main.rs  repository.rs
server/src/db/: functions.rs  init.sql  mod.rs  update_google_acc.sql
server/tests/: db_flow_end_to_end.rs
server_ingame/: Cargo.toml
server_ingame/src/: game_server.rs  main.rs  player_session.rs  start_game.rs  ws_actor.rs
shared_types/: package-lock.json  package.json  tsconfig.json
shared_types/scripts/: fetch-pokemon.js  generator.js
shared_types/src/: auth.ts  game copy.ts  game.ts  index copy.ts  index.ts  lobby.ts  movs.ts  pokemon copy.ts  pokemon.ts  result.ts
sim/: package-lock.json  package.json  tsconfig.json
sim/src/: index.ts  movs.ts
types/: Cargo.toml
types/src/: lib.rs  type.rs
(+177 files in other folders)
