[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-rt = "2.11.0"
actix-web = "4.13.0"
async-trait = "0.1"
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.9"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
log = "0.4.29"
postgres-types = { version = "0.2.12", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-postgres = { version = "0.7.16", features = [
    "with-uuid-1",
    "with-chrono-0_4",
] }
uuid = {version = "1.22.0", features = ["serde", "v4"] }

