[package]
name = "server_ingame"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
derive_more = { workspace = true }
futures-util = "0.3.32"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51.0", features = ["full", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
jsonwebtoken = "9"
