[package]
name = "server_ingame"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
chrono = { version = "0.4.44", features = ["serde"] }
derive_more = { workspace = true }
jsonwebtoken = "9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23.0", features = ["v4", "serde"] }